--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.1.2",
+  "version": "1.1.3",
   "oauth2": {
     "client_id": "737308231986315348",
     "client_secret": "mUzw1PJQjOJc0h94fPSixque2GrQxITv",
@@ -8,5 +8,5 @@
   "rpc": {
     "client_id": "749633517813628968"
   },
-  "user_id": "710e30d5-19cf-4502-ae8b-a8e5e4c076d5"
+  "user_id": ""
 }
