--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  Build:
+  Build-PC:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -24,6 +24,33 @@ jobs:
       run: pip install pyinstaller
     - name: Build RiiTag RPC
       run: pyinstaller riitag-rpc.spec
+    - name: Publish Build Artifacts
+      uses: actions/upload-artifact@master
+      with:
+        name: ${{ matrix.os }}
+        path: dist
+  
+  Build-RPI:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target: [rpi_4b_aarch64]
+        include:
+        - target: rpi_4b_aarch64
+          cpu: cortex-a53
+          cpu_info: cpuinfo/raspberrypi_4b
+          base_image: raspbian_lite:latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build Raspberry pi release
+      uses: pguyot/arm-runner-action@v2
+      with:
+        base_image: ${{ matrix.base_image }}
+        cpu: ${{ matrix.cpu }}
+        cpu_info: ${{ matrix.cpu_info }}
+        commands: |
+          python3 --version
+          ls -la
     - name: Publish Build Artifacts
       uses: actions/upload-artifact@master
       with:
