--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,8 +49,8 @@ jobs:
         cpu: ${{ matrix.cpu }}
         cpu_info: ${{ matrix.cpu_info }}
         commands: |
-          pip install -r requirements.txt
-          pip install pyinstaller
+          python3 -m pip install -r requirements.txt
+          python3 -m pip install pyinstaller
           pyinstaller riitag-rpc.spec
           ls -la
           ls -la dist/
