--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,8 +49,9 @@ jobs:
         cpu: ${{ matrix.cpu }}
         cpu_info: ${{ matrix.cpu_info }}
         commands: |
-          python3 -m pip install -r requirements.txt
-          python3 -m pip install pyinstaller
+          sudo apt install python3-pip
+          pip install -r requirements.txt
+          pip install pyinstaller
           pyinstaller riitag-rpc.spec
           ls -la
           ls -la dist/
