--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,8 +50,8 @@ jobs:
         cpu_info: ${{ matrix.cpu_info }}
         commands: |
           sudo apt-get update && sudo apt-get install -y python3-pip
-          pip install -r requirements.txt
-          pip install pyinstaller
+          pip3 install -r requirements.txt
+          pip3 install pyinstaller
           pyinstaller riitag-rpc.spec
           ls -la
           ls -la dist/
