--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,9 +49,10 @@ jobs:
         cpu: ${{ matrix.cpu }}
         cpu_info: ${{ matrix.cpu_info }}
         commands: |
-          sudo apt-get update && sudo apt-get install -y python3-pip
-          python3 -m pip install -r requirements.txt
-          python3 -m pip install pyinstaller
+          sudo apt-get update
+          sudo apt-get install -y python3-pip
+          pip3 install -r requirements.txt
+          pip3 install pyinstaller
           pyinstaller riitag-rpc.spec
           ls -la
           ls -la dist/
