--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
         cpu: ${{ matrix.cpu }}
         cpu_info: ${{ matrix.cpu_info }}
         commands: |
-          sudo apt-get update
+          sudo apt-get update || true
           sudo apt-get install -y python3-pip
           pip3 install -r requirements.txt
           pip3 install pyinstaller
