Pin build targets + add ubuntu 20.04

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest, ubuntu-latest, macOS-latest]
+        os: [windows-2022, ubuntu-22.04, ubuntu-20.04, macos-12]
 
     steps:
     - name: Obtain latest version of the repository
@@ -27,11 +27,11 @@ jobs:
     - name: Publish Build Artifacts
       uses: actions/upload-artifact@master
       with:
-        name: ${{ matrix.os }}
+        name: ${{ matrix.os }}-x64
         path: dist
   
   Build-RPI:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
         target: [rpi_4b_aarch64]
@@ -58,5 +58,5 @@ jobs:
     - name: Publish Build Artifacts
       uses: actions/upload-artifact@master
       with:
-        name: rpi-4b-latest
+        name: rpi-4b-aarch64
         path: dist
