--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-requests
-prompt_toolkit
-pypresence
-nest_asyncio
-sentry_sdk==0.16.1
+requests~=2.31.0
+prompt_toolkit~=3.0.38
+pypresence~=4.2.1
+nest_asyncio~=1.5.6
+sentry_sdk~=1.25.1
