--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,7 +106,7 @@ jobs:
           mv ubuntu22/riitag-rpc     releases/RiiTag-RPC_Ubuntu22
           mv ubuntu20/riitag-rpc     releases/RiiTag-RPC_Ubuntu20
           mv    macos/riitag-rpc     releases/RiiTag-RPC_MacOS
-          mv  windows/riitag-rpc.exe releases/RiiTag-RPC_Windows
+          mv  windows/riitag-rpc.exe releases/RiiTag-RPC_Windows.exe
           mv    rpi4b/riitag-rpc     releases/RiiTag-RPC_Rpi4B
           chmod -R +x releases/
           tar -cvf all-artifacts.tar.bz2 releases/
